provisioning/kubernetes-manifests/configuration/admin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    certmanager.k8s.io/issuer: letsencrypt-prod
spec:
  rules:
    - host: admin.<insert-environment-base-domain-here>
      http:
        paths:
          - backend:
              serviceName: admin
              servicePort: main-port
            path: /
  tls:
    - hosts:
        - admin.<insert-environment-base-domain-here>
      secretName: admin-ingress-cert # cert-manager will populate this.
